# patternproof-mvp

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: main.py  worker.py
backend/app/agents/: crawler_agent.py  dynamic_dp_agents.py  ephemeral.py  graph.py  manager.py  planner.py  report_agent.py  runner.py  state.py  static_detector.py  static_dp_agent.py  supervisor.py
backend/app/api/: audits.py  dev.py  jobs.py  reports.py  ws.py
backend/app/core/: config.py  dispatch.py  logging_config.py  supabase.py
backend/app/db/: repo.py
backend/app/models/: database.py  schemas.py  taxonomy.py
backend/app/services/: apify_client.py  crawler.py  exa_client.py  interactor.py  llm.py  notify.py  pdf_generator.py  report_builder.py  storage.py
docs/: plan.md
frontend/: Dockerfile  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/audit/[id]/: page.tsx
frontend/src/app/history/: page.tsx
frontend/src/app/job/[key]/: page.tsx
frontend/src/lib/: api.ts
ml/: Dockerfile  pyproject.toml
ml/app/: Dockerfile  pyproject.toml
ml/app/inference/: detector.py  server.py
ml/app/models/: .gitkeep
ml/app/training/: data_prep.py  train_yolo.py
ml/inference/: detector.py  server.py  vlm_explainer.py
ml/training/: data_prep.py  train_yolo.py
supabase/migrations/: 0001_init.sql  0002_storage_buckets.sql  0003_dev_reset.sql  0003_tickets.sql
