[project]
name = "pattern-proof-backend"
version = "0.1.0"
description = "Pattern Proof — Dark pattern audit service backend"
requires-python = ">=3.10.12"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
    "pydantic>=2.0,<3",
    "pydantic-settings>=2.0,<3",
    "httpx>=0.27,<1",
    "celery[redis]>=5.4,<6",
    "langgraph>=0.2,<1",
    # LLM providers (hybrid): Claude for agents/vision, OpenAI for cheap HTML parsing
    "anthropic>=0.40,<1",
    "openai>=1.50,<2",
    # External services
    "supabase>=2.9,<3",
    "apify-client>=1.8,<2",
    "exa-py>=1.7,<2",
    # Notifications
    "slack-sdk>=3.33,<4",
    "twilio>=9.3,<10",
    # HTML cleaning + reporting
    "beautifulsoup4>=4.12,<5",
    "lxml>=5.3,<6",
    "weasyprint>=62,<70",
    "pillow>=10,<12",
    "tenacity>=9.0,<10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.24,<1",
    "pytest-cov>=5,<6",
    "ruff>=0.7,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
