[project]
name = "pattern-proof-ml"
version = "0.1.0"
description = "Pattern Proof — ML inference service for dark pattern detection"
requires-python = ">=3.10.12"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
    "ultralytics>=8.3,<9",
    "pillow>=10,<12",
    "httpx>=0.27,<1",
    "python-multipart>=0.0.9,<1",
    "onnxruntime>=1.19,<2",
    "numpy>=1.26,<3",
    "pyyaml>=6,<7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
